--- a/src/app/modules/vehicles/car-details/car-details.component.html
+++ b/src/app/modules/vehicles/car-details/car-details.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <app-car-carousel class="col-xl-8 col-lg-12" [pictures]="car.pictures"></app-car-carousel>
     <div class="col-xl-4 reservation text-center">
-      <app-car-reservation-tab [car]="car"></app-car-reservation-tab>
+      <app-car-reservation-tab [car]="car" [filters]="filters"></app-car-reservation-tab>
     </div>
   </div>
   <div class="row">
